--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,13 +6,11 @@
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in</string>
     <string name="action_sign_in_short">Sign in</string>
-    <string name="error_invalid_id">This id address is invalid</string>
+    <string name="error_invalid_id">This id is invalid</string>
     <string name="error_invalid_password">This password is too short</string>
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
-    <string name="permission_rationale">"Contacts permissions are needed for providing email
-        completions."
-    </string>
+
     <string name="title_activity_admin_home">AdminHome</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
@@ -24,4 +22,9 @@
     <string name="nav_opt2">FAQs</string>
     <string name="nav_opt3">About</string>
     <string name="nav_opt4">Logout</string>
+
+    <item name="visible" type="id"/>
+    <item name="masked" type="id"/>
+
 </resources>
+
