--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,20 +11,31 @@
     <string name="error_incorrect_password">This password is incorrect</string>
     <string name="error_field_required">This field is required</string>
 
-    <string name="title_activity_admin_home">AdminHome</string>
+    <string name="title_activity_home">Home</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
     <string name="incorrect_message">Incorrect Username or Password</string>
+
     <string name="nav_opt1">Account Setup</string>
-    <string name="nav_opt2">FAQs</string>
-    <string name="nav_opt3">About</string>
-    <string name="nav_opt4">Logout</string>
+    <string name="nav_opt2">Users</string>
+    <string name="nav_opt3">FAQs</string>
+    <string name="nav_opt4">About</string>
+    <string name="nav_opt5">Logout</string>
+
+    <string name="adTvName">Name:</string>
+    <string name="asTvId">Id:</string>
+    <string name="asTvPassword">Password:</string>
+    <string name="asBuSave">Save</string>
+    <string name="asBuCancel">Cancel</string>
 
     <item name="visible" type="id"/>
     <item name="masked" type="id"/>
+    <string name="title_activity_users">Users</string>
+    <string name="title_activity_account_setup">AccountSetup</string>
+    <string name="asEtNameHint">Enter name</string>
 
 </resources>
 
