Faq and about activities added change in ip

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,6 +43,9 @@
     <string name="uaBuSave">Save</string>
     <string name="title_activity_appliances">Appliances</string>
     <string name="section_format">Hello World from section: %1$d</string>
+    <string name="asTvOldPassword">Old Password:</string>
+    <string name="title_activity_faq">Faq</string>
+    <string name="title_activity_about">About</string>
 
 </resources>
 
